[REFACTOR] Deleted strategy pattern